# rusty_crib

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  deploy.sh  index.html  manifest.json  serviceWorker.js  tailwind.config.cjs
src/: main.rs
src/atoms/: buttons.rs  mod.rs  nostr.rs  sections.rs  toasts.rs
src/js/: bindings.rs  indexed_db.rs  mod.rs  utils.js  web_utils.rs
src/layouts/: drawer.rs  main_panel.rs  mod.rs
src/relay_handler/: bunker_connect.rs  mod.rs  relay_component.rs  relay_notifier.rs  relay_pool.rs
src/user_keys/: key_context.rs  key_details.rs  key_export.rs  key_generator.rs  key_import.rs  key_page.rs  mod.rs
src/user_notes/: mod.rs  note_context.rs  note_list.rs  note_page.rs
src/user_relays/: mod.rs  new_relay.rs  relay_context.rs  relay_list.rs  relay_page.rs
styles/: input.css  output.css
