[package]
name = "nostro_bunker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.2.0"
chrono = "0.4.38"
gloo = "0.11.0"
gloo-timers = "0.3.0"
js-sys = "0.3.69"
nostro2 = "0.1.24"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.115"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-bindgen-test = "0.3.42"
web-sys = { version = "0.3.69", features = ["HtmlInputElement", "SubtleCrypto", "CryptoKey", "Window", "Crypto", "AesKeyGenParams", "AesGcmParams", "IdbFactory", "IdbOpenDbOptions", "IdbOpenDbRequest", "IdbTransaction", "IdbRequest", "IdbDatabase", "IdbObjectStore", "IdbRequestReadyState", "IdbTransactionMode", "IdbObjectStoreParameters", "Navigator", "ServiceWorkerContainer", "FetchEvent"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
